# shoot_test

./: .clang-tidy  .gitmodules  .lazy.lua  CMakeLists.txt  CMakePresets.json  RENAME_PROJECT.py  flash.cfg
.eide/: eide.yml
.github/workflows/: stm32-build.yml
CubeMX_BSP/: .mxproject  CMakeLists.txt  CMakePresets.json  GMStdRobotLib.ioc
CubeMX_BSP/Inc/: stm32f4xx_it.h
CubeMX_BSP/Src/: main.c  stm32f4xx_hal_timebase_tim.c
CubeMX_BSP/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
CubeMX_BSP/cmake/stm32cubemx/: CMakeLists.txt
GSRL/: CMakeLists.txt
GSRL/Algorithm/inc/: advanced_kalman_filters.hpp  alg_ahrs.hpp  alg_filter.hpp  alg_general.hpp
GSRL/Algorithm/src/: alg_ahrs.cpp  alg_filter.cpp
GSRL/Device/inc/: dvc_imu.hpp  dvc_motor.hpp  dvc_remotecontrol.hpp
GSRL/Device/src/: dvc_imu.cpp  dvc_motor.cpp  dvc_remotecontrol.cpp
GSRL/Driver/inc/: drv_misc.h
GSRL/Driver/src/: drv_misc.c
Task/src/: tsk_test.cpp
